# RPi_Family_App

./: .gitignore  README.md  clock_demo.py  config.py  icons_demo.py  main.py  met_demo.py  met_test.py  pyproject.toml
lib/clock/widget/: live_clock.py
lib/metoffice/: README.md  adapter.py  client.py  icons.py  models.py
lib/metoffice/domain/: models.py  schemas.py
lib/metoffice/widgets/: day_card.py  eight_day_grid.py  four_day_grid.py
test/lib/clock/: test_widget.py
test/lib/metoffice/: test_adapter.py  test_icons.py  test_widget.py
test/lib/metoffice/domain/: test_schemas.py
test/test_data/metoffice_sitespecific_point_daily/: domain.json  model.py
